crates/roomrs/tests/ui/fail/entity_quoted_identifier.rs
use roomrs::entity;

#[entity(table = "bad\"table")]
struct Bad {
    #[pk]
    id: String,
}

fn main() {}
